apps/base/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich
    component: server
spec:
  type: ClusterIP
  selector:
    app: immich
    component: server
  ports:
    - name: http
      port: 2283
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich
    component: machine-learning
spec:
  type: ClusterIP
  selector:
    app: immich
    component: machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: immich
  labels:
    app: immich
    component: redis
spec:
  type: ClusterIP
  selector:
    app: immich
    component: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
